# detector-onnx

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/od/: __init__.py  cli.py  export_cli.py  export_onnx.py  infer.py  model.py  onnx_infer.py  visualize.py
src/od_inference_ci/: cli.py
tests/: test_infer_smoke.py  test_onnx_export.py  test_output_contract.py
